--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 </div>
                 <div class="carousel-item position-relative" style="min-height: 100vh;">
                     
-                    <a href="servicos#qm"><img class="position-absolute w-100 h-100" src="img/quickm.png" style="object-fit: cover;"></a>
+                    <a href="servicos#qm"><img class="position-absolute w-100 h-100" src="img/quickm.png" style="object-fit: cover;height: 220% !important;object-position: 75% -14em !important;"></a>
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
