--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <li data-target="#header-carousel" data-slide-to="8"></li>
             </ol>
             <div class="carousel-inner">
-                <div class="carousel-item position-relative" style="min-height: 100vh;">
+                <div class="carousel-item position-relative active" style="min-height: 100vh;">
                     
                     <a href="servicos#sueca"><img class="position-absolute w-100 h-100" src="img/Massage-Dark.jpg" style="object-fit: cover;"></a>
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
@@ -634,8 +634,8 @@
 
 
     <!-- Team Start -->
-    <div class="container-fluid py-5">
-        <div class="container pt-5">
+    <div class="container-fluid py-5" style="padding-top: 0 !important;">
+        <div class="container pt-5" >
             <div class="row justify-content-center text-center">
                 <div class="col-lg-6">
                     <h6 class="d-inline-block bg-light text-primary text-uppercase py-1 px-2">Terapeuta</h6>
