--- a/preco.html
+++ b/preco.html
@@ -188,7 +188,7 @@
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Quick Massage</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração e preço:</strong><br> 15 min - R$30,00<br>20 min - R$40,00<br>30 min - R$60,00<br><br><a href="https://api.whatsapp.com/send?phone=11974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Quick%20Massage." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <div class="pl-4 border-left border-primary"><strong>Duração e preço:</strong><br> 15 min - R$30,00<br>20 min - R$40,00<br>30 min - R$60,00<br><strong>Disponível somente na unidade Instituto Fisiologic</strong><br><a href="https://api.whatsapp.com/send?phone=11974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Quick%20Massage." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
