--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         </div>
                     </div>
                     <a href="preco" class="nav-item nav-link">Preços</a>
-                    <a href="contato.html" class="nav-item nav-link ">Contato</a>
+                    <a href="contato" class="nav-item nav-link ">Contato</a>
                 </div>
 <a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." target="_blank" class="btn btn-primary d-none d-lg-block">Agendar</a>            </div>
         </nav>
