--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-6 pb-5 pb-lg-0">
-                    <img class="img-fluid w-100" src="img/wellness.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/h3.jpg" alt="">
                 </div>
                 <div class="col-lg-6">
                     <h1 class="mb-4">Relaxe, Revitalize e Recupere</h1>
@@ -644,7 +644,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6">
                     <div class="team position-relative overflow-hidden mb-5">
-                        <img class="img-fluid" src="img/foto.jpg" alt="">
+                        <img class="img-fluid" src="img/h1.jpg" alt="">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
                                 <p class="m-0">Terapeuta manual, integrativo, instrutor de pilates &<br>graduando em fisioterapia</p>
