--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         </div>
         <div class="owl-carousel service-carousel">
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/pistola.jpg" alt="">
+                <img class="img-fluid" src="img/tt/r1.jpg" alt="">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Pistola de massagem</h4>
                     <p class="text-white px-3 mb-3">Vibrações terapêuticas precisas, alívio muscular eficaz, recuperação mais rápida e sensação revigorante com a pistola de massagem.</p>
@@ -322,7 +322,7 @@
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/ventosa.png" alt="">
+                <img class="img-fluid" src="img/tt/v1.jpg" alt="">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Ventosas</h4>
                     <p class="text-white px-3 mb-3">Sucção controlada, alívio da tensão, aumento da circulação sanguínea, redução de inflamações e relaxamento profundo com as ventosas terapêuticas.</p>
@@ -332,7 +332,7 @@
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/ventosa.png" alt="">
+                <img class="img-fluid" src="img/tt/pedras.jpg" alt="">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Pedras quentes</h4>
                     <p class="text-white px-3 mb-3">Calor aconchegante e reconfortante, promovendo relaxamento profundo, melhora da circulação e tensões, a experiência terapêutica das pedras quentes é verdadeiramente revigorante.</p>
@@ -343,7 +343,7 @@
             </div>
             
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/bota.jpg" alt="">
+                <img class="img-fluid" src="img/tt/bota1.jpg" alt="">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Bota Pneumática</h4>
                     <p class="text-white px-3 mb-3">Compressão suave, melhora da circulação, redução do inchaço e recuperação acelerada com a bota pneumática terapêutica.</p>
@@ -353,7 +353,7 @@
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/service-3.jpg" alt="">
+                <img class="img-fluid" src="img/tt/amb.jpg" alt="">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Ambiente climatizado</h4>
                     <p class="text-white px-3 mb-3">Conforto ideal, ambiente agradável, temperatura regulada, experiência relaxante e climatização para o seu bem-estar.</p>
@@ -373,7 +373,7 @@
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/tens.jpg" alt="">
+                <img class="img-fluid" src="img/tt/r1.jpg" alt="">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Recursos instrumentais</h4>
                     <p class="text-white px-3 mb-3">Pantalas, bambu, instrumento de liberação miofascial e mais para proporcionar uma terapia de acordo com a sua necessidade.</p>
