--- a/sobre.html
+++ b/sobre.html
@@ -148,11 +148,11 @@
         <div class="container pt-5">
             <div class="row align-items-center">
                 <div class="col-lg-6 pb-5 pb-lg-0">
-                    <img class="img-fluid w-100" src="img/wellness.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/ff.jpg" alt="">
                 </div>
                 <div class="col-lg-6">
                     <h1 class="mb-4">William Otavio Souto</h1>
-                    <span class="pl-4 border-left border-primary d-block"><p>------------Faz terapia manual desde 2021, em 2023 abriu</p><p> Graduando em fisioterapia no último semestre pelo Centro Universitário FMABC, graduado em análise e desenvolvimento de sistemas pela FIT.</p><p>É estagiário de fisioterapia no Instituto Fisiologic, atuou como estagiário de massoterapia na Escola Bergqvist e de fisioterapia no Centro de Reabilitação e Equoterapia Coração Valente. </p><p>É formado em diversas técnicas de massoterapia pela Escola Bergqvist Massage & Friskvårdutbildningar, a Escola Bergqvist possui 40 anos de experiência como a melhor e mais tradicional escola de massagem da Suécia e no Brasil, e é líder em pesquisas científicas na Suécia sobre os efeitos da massagem. </p><p>Cursou "Avaliação e Intervenção do sistema fascial - Conceito ROLF", ministrado pela Maria Eugenia Ortiz(Gegê), fisioterapeuta da seleção brasileira masculina de ginástica artística.</p> <p>Outras formações descritas abaixo na página.</p>
+                    <span class="pl-4 border-left border-primary d-block"><p> Graduando em fisioterapia no último semestre(Centro Universitário FMABC)</p><p>Graduado em análise e desenvolvimento de sistemas(FAM).</p><p>É estagiário de fisioterapia no Instituto Fisiologic, atuou como estagiário de massoterapia na Escola Bergqvist e de fisioterapia no Centro de Reabilitação e Equoterapia Coração Valente. </p><p>É formado em diversas técnicas de massoterapia pela Escola Bergqvist Massage & Friskvårdutbildningar, a Escola Bergqvist possui 40 anos de experiência como a melhor e mais tradicional escola de massagem da Suécia e no Brasil, e é líder em pesquisas científicas na Suécia sobre os efeitos da massagem. </p><p>Cursou "Avaliação e Intervenção do sistema fascial - Conceito ROLF", ministrado pela Maria Eugenia Ortiz(Gegê), fisioterapeuta da seleção brasileira masculina de ginástica artística.</p> <p>Outras formações descritas abaixo na página.</p>
                        
                     </span>
                        </div>
