--- a/preco.html
+++ b/preco.html
@@ -177,7 +177,7 @@
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Liberação miofascial (Deep tissue)</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$100,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Libera%C3%A7%C3%A3o%20miofascial%20(Deep%20tissue)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$110,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Libera%C3%A7%C3%A3o%20miofascial%20(Deep%20tissue)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
@@ -199,7 +199,7 @@
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Massagem Sueca (Clássica)</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$100,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20Sueca(Cl%C3%A1ssica)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <div class="pl-4 border-left border-primary"><strong>Duração e preço:</strong><br> 50 min - R$100,00<br>70 min - R$130,00<br>90 min - R$160,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20Sueca(Cl%C3%A1ssica)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
@@ -250,7 +250,7 @@
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Ventosaterapia</h4>
-                   <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$100,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Ventosaterapia." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                   <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$110,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Ventosaterapia." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
