--- a/preco.html
+++ b/preco.html
@@ -176,6 +176,17 @@
                     <img class="img-fluid w-100" src="img/libe.jpg" alt="">
                 </div>
                 <div class="col-lg-5">
+                    <h4 class="mb-4">Terapia mista</h4>
+                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$130,00<br><strong>Dinâmica:</strong> Terapia individualizada onde abrange todas as técnicas e recursos do terapeuta, sendo aplicadas de acordo com os objetivos e necessidades do cliente.<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Libera%C3%A7%C3%A3o%20miofascial%20(Deep%20tissue)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                       </div>
+            </div>
+        </div>
+        <div class="container py-5">
+            <div class="row align-items-center">
+                <div class="col-lg-3 pb-3 pb-lg-0 text-center">
+                    <img class="img-fluid w-100" src="img/libe.jpg" alt="">
+                </div>
+                <div class="col-lg-5">
                     <h4 class="mb-4">Liberação miofascial (Deep tissue)</h4>
                     <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$110,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Libera%C3%A7%C3%A3o%20miofascial%20(Deep%20tissue)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
@@ -214,7 +225,6 @@
                        </div>
             </div>
         </div>
-    
     
         <div class="container py-5">
             <div class="row align-items-center">
