--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6">
                     <div class="team position-relative overflow-hidden mb-5">
-                        <img class="img-fluid" src="img/ff.jpg" alt="">
+                        <img class="img-fluid" src="img/retrato.jpg" alt="">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
                                 <p class="m-0">Terapeuta manual, integrativo, instrutor de pilates &<br>graduando em fisioterapia</p>
