--- a/sobre.html
+++ b/sobre.html
@@ -148,7 +148,7 @@
         <div class="container pt-5">
             <div class="row align-items-center">
                 <div class="col-lg-6 pb-5 pb-lg-0">
-                    <img class="img-fluid w-100" src="img/ff.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/wq1.jpg" alt="">
                 </div>
                 <div class="col-lg-6">
                     <h1 class="mb-4">William Otavio Souto</h1>
