--- a/tree.html
+++ b/tree.html
@@ -26,7 +26,7 @@ https://github.com/ardacarofficial/links-website is open source project.
     <header>
     <!-- Logo, Title and Description Codes Start -->
       <div class="header_img flex_column_center pb-3">
-        <img src="img/foto.jpg" alt="Logo" />
+        <img src="img/wq1.jpg" alt="Logo" />
       </div>
       <div class="header_text flex_column_center">
         <h1 class="header_h_item">William Otavio Souto</h1>
