--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                 <img src="img/hayanna.jpg" style=" max-height: 150px; ">
             </div>
         </div>
-        <div class="owl-carousel service-carousel nonloop">
+        <div class="owl-carousel serviced-carousel nonloop">
             
             <div class="service-item position-relative">
                 <img class="img-fluid" src="img/v2.jpg" alt="">
