--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
                                 <a class="text-white-50 mb-2" href="/"><i class="fa fa-angle-right mr-2"></i>Home</a>
                                 <a class="text-white-50 mb-2" href="sobre"><i class="fa fa-angle-right mr-2"></i>Sobre</a>
                                 <a class="text-white-50 mb-2" href="precos"><i class="fa fa-angle-right mr-2"></i>Preços</a>
-                                <a class="text-white-50" href="contato"><i class="fa fa-angle-right mr-2"></i>Contato</a>
+                                 <a class="text-white-50" href="contato"><i class="fa fa-angle-right mr-2"></i>Contato</a> <a class="text-white-50" href="contato"><i class="fa fa-angle-right mr-2"></i>Endereços</a>
                             </div>
                         </div>
                         <div class="col-sm-6 mb-5">
