--- a/shell.html
+++ b/shell.html
@@ -178,7 +178,7 @@
                                 <a class="text-white-50 mb-2" href="sobre"><i class="fa fa-angle-right mr-2"></i>Sobre</a>
                                 <a class="text-white-50 mb-2" href="servicos"><i class="fa fa-angle-right mr-2"></i>Serviços</a>
                                 <a class="text-white-50 mb-2" href="precos"><i class="fa fa-angle-right mr-2"></i>Preços</a>
-                                <a class="text-white-50" href="contato"><i class="fa fa-angle-right mr-2"></i>Contato</a>
+                                 <a class="text-white-50" href="contato"><i class="fa fa-angle-right mr-2"></i>Contato</a> <a class="text-white-50" href="contato"><i class="fa fa-angle-right mr-2"></i>Endereços</a>
                             </div>
                         </div>
                         <div class="col-sm-6 mb-5">
