--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
             <div class="row justify-content-center text-center">
                 <div class="col-lg-6">
                     <h6 class="d-inline-block bg-light text-primary text-uppercase py-1 px-2">Terapeuta</h6>
-                    <h1 class="mb-4">William Souto</h1>
+                    <h3 class="mb-4 mt-2">William Otavio Souto</h3>
                 </div>
             </div>
             <div class="row">
