--- a/index.html
+++ b/index.html
@@ -275,7 +275,9 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-6 pb-5 pb-lg-0">
-                    <img class="img-fluid w-100" src="img/h3.jpg" alt="">
+                    <video width="480" height="854" controls>
+  <source src="movie.mp4" type="file/massovideo.mp4">
+ </video>
                 </div>
                 <div class="col-lg-6">
                     <h1 class="mb-4">Relaxe, Revitalize e Recupere</h1>
