--- a/index.html
+++ b/index.html
@@ -275,9 +275,9 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-6 pb-5 pb-lg-0">
-                    <video width="480" height="854" controls>
-  <source src="movie.mp4" type="file/massovideo.mp4">
- </video>
+                    <div class="embed-responsive embed-responsive-16by9">
+  <iframe class="embed-responsive-item" src="files/massovideo.mp4"></iframe>
+</div>
                 </div>
                 <div class="col-lg-6">
                     <h1 class="mb-4">Relaxe, Revitalize e Recupere</h1>
