--- a/index.html
+++ b/index.html
@@ -275,9 +275,11 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-6 pb-5 pb-lg-0">
-                    <div class="embed-responsive embed-responsive-16by9">
-  <iframe class="embed-responsive-item" src="files/massovideo.mp4"></iframe>
-</div>
+                    <video width="320" height="240" controls>
+  <source src="file/massovideo.mp4" type="file/mp4">
+
+Your browser does not support the video tag.
+</video>
                 </div>
                 <div class="col-lg-6">
                     <h1 class="mb-4">Relaxe, Revitalize e Recupere</h1>
