--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 pb-5 pb-lg-0">
                     <video width="320" height="240" controls>
-  <source src="file/massovideo.mp4" type="file/mp4">
+  <source src="files/massovideo.mp4" type="file/mp4">
 
 Your browser does not support the video tag.
 </video>
