--- a/index.html
+++ b/index.html
@@ -275,11 +275,13 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-6 pb-5 pb-lg-0">
-                    <video width="320" height="240" controls>
-  <source src="files/massovideo.mp4" type="file/mp4">
+                    <video width="320" height="240" controls="controls" autoplay="autoplay">
+  <source src="files/massovideo.mp4" type="file/mp4" />
 
-Your browser does not support the video tag.
+O seu navegador não suporta a tag vídeo
+
 </video>
+                   
                 </div>
                 <div class="col-lg-6">
                     <h1 class="mb-4">Relaxe, Revitalize e Recupere</h1>
