--- a/index.html
+++ b/index.html
@@ -281,7 +281,13 @@
 O seu navegador não suporta a tag vídeo
 
 </video>
-                   
+                  <video controls width="250">
+
+
+    <source src="https://drwill.com.br/files/massovideo.mp4" type="video/mp4">
+
+
+</video> 
                 </div>
                 <div class="col-lg-6">
                     <h1 class="mb-4">Relaxe, Revitalize e Recupere</h1>
