--- a/index.html
+++ b/index.html
@@ -276,9 +276,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 pb-5 pb-lg-0">
                     <video width="320" height="240" controls="controls" autoplay="autoplay">
-  <source src="files/massovideo.mp4" type="file/mp4" />
-
-O seu navegador não suporta a tag vídeo
+  <source src="files/massovideo.mp4" type="video/mp4" />
 
 </video>
                   <video controls width="250">
