--- a/index.html
+++ b/index.html
@@ -274,10 +274,10 @@
     <div class="container-fluid py-5">
         <div class="container py-5">
             <div class="row align-items-center">
-                <div class="col-lg-6 pb-5 pb-lg-0">
+                <div class="col-lg-4 pb-5 pb-lg-0 text-center">
                     <iframe width="281" height="500" src="https://www.youtube.com/embed/J_6uP9pUh-U?start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-8">
                     <h1 class="mb-4">Relaxe, Revitalize e Recupere</h1>
                     <p class="pl-4 border-left border-primary">Oferecemos uma variedade de técnicas terapêuticas personalizadas para aliviar o estresse, reduzir a tensão muscular e promover uma sensação de tranquilidade profunda. Nossos tratamentos revitalizantes estimulam a circulação, aumentam a flexibilidade e reenergizam seu corpo e mente. Se você está se recuperando de lesões ou buscando alívio para dores crônicas, estou aqui para ajudar.</p>
                     <div class="row pt-3">
