--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-4 pb-5 pb-lg-0 text-center">
-                    <iframe class="mainvideo" width="279" height="500" src="https://www.youtube.com/embed/J_6uP9pUh-U?&showinfo=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe class="mainvideo" width="279" height="500" src="https://www.youtube.com/embed/J_6uP9pUh-U?rel=0&amp;controls=0&amp;showinfo=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
                 <div class="col-lg-8">
                     <h1 class="mb-4">Relaxe, Revitalize e Recupere</h1>
