--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-4 pb-5 pb-lg-0 text-center">
-                    <iframe class="mainvideo" width="279" height="500" src="https://www.youtube.com/embed/J_6uP9pUh-U?autoplay=1&mute=1&loop=1&color=white&controls=0&modestbranding=1&playsinline=1&rel=0&enablejsapi=1&playlist=WhY7uyc56ms" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="mainvideo" width="279" height="500" src="https://www.youtube.com/watch?v=J_6uP9pUh-U?color=white&controls=1&modestbranding=1&playsinline=1&rel=0&enablejsapi=1&playlist=J_6uP9pUh-U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="col-lg-8">
                     <h1 class="mb-4">Relaxe, Revitalize e Recupere</h1>
