--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                     <h4 class="text-white font-weight-medium px-3">Pistola de massagem</h4>
                     <p class="text-white px-3 mb-3">Vibrações terapêuticas precisas, alívio muscular eficaz, recuperação mais rápida e sensação revigorante com a pistola de massagem.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="">Agendar</a>
+                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o.">Agendar</a>
                     </div>
                 </div>
             </div>
@@ -328,7 +328,7 @@
                     <h4 class="text-white font-weight-medium px-3">Bota Pneumática</h4>
                     <p class="text-white px-3 mb-3">Compressão suave, melhora da circulação, redução do inchaço e recuperação acelerada com a bota pneumática terapêutica.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="">Agendar</a>
+                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o.">Agendar</a>
                     </div>
                 </div>
             </div>
@@ -338,7 +338,7 @@
                     <h4 class="text-white font-weight-medium px-3">Ventosas</h4>
                     <p class="text-white px-3 mb-3">Sucção controlada, alívio da tensão, aumento da circulação sanguínea, redução de inflamações e relaxamento profundo com as ventosas terapêuticas.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="">Agendar</a>
+                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o.">Agendar</a>
                     </div>
                 </div>
             </div>
@@ -348,7 +348,7 @@
                     <h4 class="text-white font-weight-medium px-3">Pedras quentes</h4>
                     <p class="text-white px-3 mb-3">Calor aconchegante e reconfortante, promovendo relaxamento profundo, melhora da circulação e tensões, a experiência terapêutica das pedras quentes é verdadeiramente revigorante.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="">Agendar</a>
+                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o.">Agendar</a>
                     </div>
                 </div>
             </div>
@@ -358,7 +358,7 @@
                     <h4 class="text-white font-weight-medium px-3">Recursos instrumentais</h4>
                     <p class="text-white px-3 mb-3">Pantalas, bambu, instrumento de liberação miofascial e mais para proporcionar uma terapia de acordo com a sua necessidade.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="">Agendar</a>
+                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o.">Agendar</a>
                     </div>
                 </div>
             </div>
@@ -369,7 +369,7 @@
                     <h4 class="text-white font-weight-medium px-3">Ambiente climatizado</h4>
                     <p class="text-white px-3 mb-3">Conforto ideal, ambiente agradável, temperatura regulada, experiência relaxante e climatização para o seu bem-estar.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="">Agendar</a>
+                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o.">Agendar</a>
                     </div>
                 </div>
             </div>
@@ -379,7 +379,7 @@
                     <h4 class="text-white font-weight-medium px-3">TENS</h4>
                     <p class="text-white px-3 mb-3">Estimulação elétrica suave, alívio da dor, relaxamento muscular, bem-estar terapêutico e tratamento eficaz com o TENS.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="">Agendar</a>
+                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o.">Agendar</a>
                     </div>
                 </div>
             </div>
@@ -402,7 +402,7 @@
                     <h4 class="text-white font-weight-medium px-3">Ventosas</h4>
                     <p class="text-white px-3 mb-3">Sucção controlada, alívio da tensão, aumento da circulação sanguínea, redução de inflamações e relaxamento profundo com as ventosas terapêuticas.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="">Agendar</a>
+                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o.">Agendar</a>
                     </div>
                 </div>
             </div>
@@ -412,7 +412,7 @@
                     <h4 class="text-white font-weight-medium px-3">Pedras quentes</h4>
                     <p class="text-white px-3 mb-3">Calor aconchegante e reconfortante, promovendo relaxamento profundo, melhora da circulação e tensões, a experiência terapêutica das pedras quentes é verdadeiramente revigorante.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="">Agendar</a>
+                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o.">Agendar</a>
                     </div>
                 </div>
             </div>
@@ -422,7 +422,7 @@
                     <h4 class="text-white font-weight-medium px-3">Recursos instrumentais</h4>
                     <p class="text-white px-3 mb-3">Pantalas, bambu, instrumento de liberação miofascial e mais para proporcionar uma terapia de acordo com a sua necessidade.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="">Agendar</a>
+                        <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o.">Agendar</a>
                     </div>
                 </div>
             </div>
@@ -640,7 +640,7 @@
                         <img class="img-fluid" src="img/wq1.jpg" alt="">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
-                                <p class="m-0">Terapeuta manual, integrativo, instrutor de pilates &<br>graduando em fisioterapia</p>
+                                <p class="m-0" style="font-size: 0.98em;">Terapeuta manual, integrativo, instrutor de pilates &<br>graduando em fisioterapia</p>
                             </div>
                             <div class="team-social bg-dark text-center">
                                 <a class="btn btn-outline-primary btn-square mr-2" href="https://www.instagram.com/drwillsouto/" target="_blank"><i class="fab fa-instagram"></i></a>
