--- a/contato.html
+++ b/contato.html
@@ -344,7 +344,7 @@
                         <div class="col-sm-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4">Nossos serviços</h5>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white-50 mb-2" href="servicos#dt"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Deep Tissue)</a><a class="text-white-50 mb-2" href="servicos#qm"><i class="fa fa-angle-right mr-2"></i>Quick Massage</a>
+                                <a class="text-white-50 mb-2" href="servicos#dt"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial <br>(Deep Tissue)</a><a class="text-white-50 mb-2" href="servicos#qm"><i class="fa fa-angle-right mr-2"></i>Quick Massage</a>
                                 <a class="text-white-50 mb-2" href="servicos#sueca"><i class="fa fa-angle-right mr-2"></i>Massagem Sueca (Clássica)</a>
                                 <a class="text-white-50 mb-2" href="servicos#relax"><i class="fa fa-angle-right mr-2"></i>Massagem Relaxante</a>
                                 <a class="text-white-50 mb-2" href="servicos#dl"><i class="fa fa-angle-right mr-2"></i>Drenagem Linfática</a>
